gcc/testsuite/gm2/iso/fail/badfield.mod
MODULE badfield ;

TYPE
   rec = RECORD
            xpos,
            ypos: CARDINAL ;
         END ;

VAR
   v: rec ;
BEGIN
   v.xpod := 1
END badfield.
